# bosun

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/: README.md
bosun/: Dockerfile  docker-compose.yml  hooks.yaml
bosun/scripts/: entrypoint.sh
cmd/bosun/: main.go
composer/: pyproject.toml
composer/profiles/: healthcheck.yml  monitoring.yml  postgres.yml  redis.yml
composer/services/: stirling-pdf.yml
composer/stacks/: apps.yml
conductor/: hooks.yaml
docs/: architecture.md  cli-reference.md  commands.md  concepts.md  docker-integration.md  edge-case-analysis.md  error-handling.md  gitops.md  manifest-system.md  migration.md  reconcile-security-analysis.md  security.md  testing.md  troubleshooting.md  workflows.md
docs/adr/: 0001-manifest-system.md  0001-service-composer.md  0002-watchtower-webhook-deploy.md  0003-dagger-for-bosun.md  0003-dagger-for-conductor.md  0004-multi-server-monorepo.md  0005-tunnel-providers.md  0006-bosun-authentication.md  0006-conductor-authentication.md  0007-agentgateway-mcp-proxy.md  0008-container-vs-daemon.md  (+3 more)
examples/: compose.yml.tmpl  secrets.yaml.example
manifest/: manifest.py  pyproject.toml
manifest/profiles/: homepage.yml
manifest/provisions/: webapp.yml
manifest/services/: norish.yml  stirling-pdf.yml
manifest/values/: prod.yml
runner/: Dockerfile
scripts/: install.sh
unraid-templates/: README.md  bosun.xml  unops-conductor.xml
(+146 files in other folders)
