[project]
name = "bosun-manifest"
version = "0.1.0"
description = "Crew Manifest - Generate compose, traefik, and gatus configs from service manifests"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
manifest = "manifest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
